# rithm

./: README.md  pyproject.toml
rithm/recursion/fibonnaci/: __init__.py  fibonnaci.py
rithm/searching/binary/: __init__.py  binary.py
rithm/sorting/bubble/: __init__.py  bubble.py
rithm/sorting/merge/: __init__.py  merge.py
rithm/sorting/quick/: __init__.py  quick.py
rithm/sorting/selection/: __init__.py  selection.py
